--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "tsc && node ./dist/index.js",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "start": "node ./dist/index.js",
     "debug": "export DEBUG=* && npm run start",
     "test": "nodemon --watch . --ext ts --exec \"mocha -r ts-node/register test/**/*.test.ts\""
   },
